@@ -35,8 +35,9 @@ wajig (2.8~pre) UNRELEASED; urgency=low
   * replace internal function with a more thorough stdlib shutil.which()
     for checking if a particular executable exists;
     this bumps minimum Python dependency to 3.3
+  * LISTLOG: add APTLOG as synonym, in place of an erroneously-added SYSLOG
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 26 May 2013 13:24:32 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 26 May 2013 23:57:24 +0200
 
 wajig (2.7.3) unstable; urgency=low
 
